namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-probation-integration-services-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-probation-integration-services-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-integration-team"
    cloud-platform.justice.gov.uk/application: "hmpps-probation-integration-services"
    cloud-platform.justice.gov.uk/owner: "probation-integration: probation-integration-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-probation-integration-services"
    cloud-platform.justice.gov.uk/team-name: "probation-integration"
    cloud-platform.justice.gov.uk/review-after: ""
