namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-probation-integration-services-preprod/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: hmpps-probation-integration-services-preprod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: hmpps-probation-integration-services-preprod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: hmpps-probation-integration-services-preprod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hmpps-tier-preprod
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: make-recall-decision-preprod
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hmpps-manage-people-on-probation-preprod
